2001-03-16  Alexander Larsson  <alexl@redhat.com>

	* gdk/x11/gdkgeometry-x11.c (_gdk_window_process_expose):
	Fix sign error with queued region translations.

2001-03-15  HideToshi Tajima  <tajima@happy>

	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_set_cursor_location): 
	* gtk/gtkimmulticontext.c (gtk_im_multicontext_set_cursor_location):
	* gtk/gtkentry.c (update_im_cursor_location): 
	* gtk/gtkimcontext.c (gtk_im_context_set_cursor_location):
	* gtk/gtkimcontext.h (struct _GtkIMContextClass): rename
	set_cursor_pos to set_cursor_location in GtkInputContext class

Thu Mar 15 18:22:44 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkcellrenderer.h: Changed prototype to allow for getting
	the location of the cell relative to its area.
	* gtk/gtkcell*: modified for above change
	* gtk/gtktreeview.c: modified for above change.

Wed Mar 14 13:58:32 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_model): Ref the model.
	 (gtk_tree_view_finalize): actually unref the model.  Thanks to
	Jamie Strachan <frostfreek@yahoo.com> for noticing this error.

2001-03-14  Havoc Pennington  <hp@redhat.com>

        * gtk/gtkdata.h, gtk/gtkdata.c: Delete.
	
	* gtk/gtk.h: remove gtkdata.h

	* gtk/Makefile.am: remove gtkdata
	
	* gtk/gtktext.c (gtk_text_set_adjustments): connect to "destroy"
	not "disconnect" on the adjustments.
	
	* gtk/gtktooltips.h, gtk/gtktooltips.c: derive from GtkObject not
	GtkData

	* gtk/gtkadjustment.h, gtk/gtkadjustment.c: derive from GtkObject
	not GtkData

	* configure.in: handle case where X render exists, but Pango lacks
	Xft support.

2001-03-15 Alexander Larsson  <alexl@redhat.com>

	* gtk/gtktoolbar.[ch]:
	New functions gtk_toolbar_set_icon_size and gtk_toolbar_insert_stock
	to add stock items to toolbars.

	* gtk/Makefile.am:
	Remove ../gdk/gdkim.h from gdk_headers.

2001-03-15  Sven Neumann  <sven@gimp.org>

	* gdk/gdkim.h: removed
	
	* gdk/gdkprivate.h